# BPX

./: .flake8  .gitignore  .readthedocs.yaml  CHANGELOG.md  CODE-OF-CONDUCT.md  README.md  pyproject.toml
.github/workflows/: publish_pypi.yml  test.yml
bpx/: __init__.py  _migrations.py  base_extra_model.py  expression_parser.py  function.py  interpolated_table.py  parsers.py  schema.py  schema_utils.py  utilities.py  validators.py
docs/: CONTRIBUTING.md  conf.py  index.rst
docs/_static/: main.css
docs/source/api/: expression_parser.rst  function.rst  index.rst  interpolated_table.rst  parsers.rst  schema.rst  utilities.rst
docs/source/user_guide/: getting_started.md  index.md  installation.md
examples/: Practice.py  lfp_18650_cell_BPX.json  nmc_pouch_cell_BPX.json  nmc_pouch_cell_BPX_SPM.json  nmc_pouch_cell_BPX_blended_electrode.json  nmc_pouch_cell_BPX_user-defined_hysteresis.json
tests/: test_parsers.py  test_schema.py  test_utilities.py
